====================[v2.0.7.1 - 08/05/2021]====================
- Fixed HEX colors formatting in some cases.
====================[v2.0.7 - 28/04/2021]====================
- Various fixes & improvements.
====================[v2.0.6 - 01/03/2021]====================
- Lang API improved:
-- ILangMsg class is independed now.
-- ILangMsg now accepts custom parameters to define message type and settings.
-- ILangTemplate now can be used not only as a plugin general lang config.
-- ILangTemplate now correctly inheritance super class message values.
-- Added support for custom user placeholders.
-- Removed outdated and useless methods.
- CraftManager is global now.
====================[v2.0.5 - 23/02/2021]====================
- External modules support.
====================[v2.0.4.2 - 29/01/2021]====================
- Fixed some GUI glitches.
====================[v2.0.3 - 09/11/2020]====================
- Improved IUserManager - now async data load.
- Improved IAbstractUser class.
====================[v2.0.0 - 09/11/2020]====================
- Improved CommandRegister class. Now respects command permission.
- Improved EditorManager class, merged from EditorUtils.
- Improved Packet Engine event classes.
- Improved HookManager class.
- Improved Citizens hook.
- Added missing editor messages to the locale config.
- Added abstract Event templates.
- Added variables to the time formats.
- Optimized new user data creation.
- Optimized Actions Manager.
- Code refactor.
====================[v1.9.9e - 03/11/2020]====================
- Added 1.16.4 support.
====================[v1.9.9e - 16/10/2020]====================
- Added an ability to provide localized names for your worlds in config.
====================[v1.9.9e - 13/10/2020]====================
- Improved instant save option.
====================[v1.9.9e - 12/10/2020]====================
- Fixed another ChatComponent's Hex colors.
# game updates sucks
====================[v1.9.9e - 07/10/2020]====================