@@ -1,6 +1,6 @@
 name: NexEngine
 main: su.nexmedia.engine.NexEngine
-version: 2.0.7.1
+version: 2.0.7.2
 description: NEX Plugin Engine
 author: NEX-Media
 softdepend: [Vault, WorldGuard, MythicMobs]
