@@ -1,3 +1,5 @@
+====================[v2.0.7.2 - 09/05/2021]====================
+- Fixed offhand item take in .PlayerUT.takeItem method.
 ====================[v2.0.7.1 - 08/05/2021]====================
 - Fixed HEX colors formatting in some cases.
 ====================[v2.0.7 - 28/04/2021]====================
